--- a/16_Shop_MultiProduct/Views/Product/Checkout.cshtml
+++ b/16_Shop_MultiProduct/Views/Product/Checkout.cshtml
@@ -49,6 +49,7 @@
                                         <th>Thông tin</th>
 
                                         <th>Đơn giá</th>
+                                        <th>Giảm giá</th>
                                         <th>Số lượng</th>
                                         @*<th>Tổng</th>*@
                                         <th class="action"><i class="fa fa-trash-o"></i></th>
@@ -58,11 +59,11 @@
                                 <tfoot>
                                     <tr>
                                         
-                                        <td colspan="3">Tổng giá sản phẩm </td>
+                                        <td colspan="4">Tổng giá sản phẩm </td>
                                         <td colspan="2" id="ttPrCt"></td>
                                     </tr>
                                     <tr>
-                                        <td colspan="3"><strong>Tổng đơn hàng (bao gồm ship)</strong></td>
+                                        <td colspan="4"><strong>Tổng đơn hàng (bao gồm ship)</strong></td>
                                         <td colspan="2"><strong id="ttOdCt"></strong></td>
                                     </tr>
                                 </tfoot>
