--- a/17_Tour/Views/Shared/_Layout.cshtml
+++ b/17_Tour/Views/Shared/_Layout.cshtml
@@ -81,6 +81,136 @@
     </nav>
     <div class="bg-white body-back">
         @RenderBody()
+        <div class="text-center" id="amz-info">
+            <div id="amz-info-btc" class="text-center">
+                <h4 class="font-bold-play-fair" style="padding-bottom: 1%;">Ban Tổ Chức</h4><img class="col-1" src="/assets/img/btc.png" style="padding-bottom: 3%;">
+            </div><img class="gach-xanh" src="/assets/img/gach-xanh.png" style="padding-bottom: 1%;">
+            <div id="amz-info-doiTac" class="text-center" style="padding-top: 2%;">
+                <h4 class="font-bold-play-fair" style="padding-bottom: 1%;">Đối Tác</h4>
+                <div class="justify-content-center align-items-center row" style="padding-bottom: 1%;">
+                    <img class="col-2" src="/assets/img/dt1.jpg" style="width: 20%;">
+                    <img class="col-2" src="/assets/img/dt2.jpg" style="width: 20%;">
+                    <img class="col-2" src="/assets/img/dt3.jpg" style="width: 20%;">
+                    <img class="col-2" src="/assets/img/dt4.jpg" style="width: 20%;">
+                </div>
+            </div>
+            <img class="gach-xanh" src="/assets/img/gach-xanh.png" style="padding-bottom: 3%;">
+            <div id="amz-info-ntt" class="text-center" style="padding-bottom: 5%;">
+                <h4 class="font-bold-play-fair" style="padding-bottom: 1%;">Nhà tài trợ</h4>
+                <div data-ride="carousel" class="carousel" id="carousel-3">
+                    <div role="listbox" class="carousel-inner">
+                        <div class="carousel-item" id="6">
+                            <div class="align-items-center row">
+                                <img id="img1" class="col-2" src="/assets/img/ntt1.jpg" />
+                                <img id="img2" class="col-2" src="/assets/img/ntt2.jpg" />
+                                <img id="img3" class="col-2" src="/assets/img/ntt3.jpg" />
+                                <img id="img4" class="col-2" src="/assets/img/ntt4.jpg" />
+                                <img id="img5" class="col-2" src="/assets/img/ntt5.jpg" />
+                                <img id="img6" class="col-2" src="/assets/img/ntt6.jpg" />
+                            </div>
+                        </div>
+                        <div class="carousel-item" id="7">
+                            <div class="align-items-center row">
+                                <img id="img2" class="col-2" src="/assets/img/ntt2.jpg" />
+                                <img id="img3" class="col-2" src="/assets/img/ntt3.jpg" />
+                                <img id="img4" class="col-2" src="/assets/img/ntt4.jpg" />
+                                <img id="img5" class="col-2" src="/assets/img/ntt5.jpg" />
+                                <img id="img6" class="col-2" src="/assets/img/ntt6.jpg" />
+                                <img id="img7" class="col-2" src="/assets/img/ntt7.jpg" />
+                            </div>
+                        </div>
+                        <div class="carousel-item" id="8">
+                            <div class="align-items-center row">
+                                <img id="img3" class="col-2" src="/assets/img/ntt3.jpg" />
+                                <img id="img4" class="col-2" src="/assets/img/ntt4.jpg" />
+                                <img id="img5" class="col-2" src="/assets/img/ntt5.jpg" />
+                                <img id="img6" class="col-2" src="/assets/img/ntt6.jpg" />
+                                <img id="img7" class="col-2" src="/assets/img/ntt7.jpg" />
+                                <img id="img8" class="col-2" src="/assets/img/ntt8.jpg" />
+                            </div>
+                        </div>
+                        <div class="carousel-item active" id="9">
+                            <div class="align-items-center row">
+                                <img id="img4" class="col-2" src="/assets/img/ntt4.jpg" />
+                                <img id="img5" class="col-2" src="/assets/img/ntt5.jpg" />
+                                <img id="img6" class="col-2" src="/assets/img/ntt6.jpg" />
+                                <img id="img7" class="col-2" src="/assets/img/ntt7.jpg" />
+                                <img id="img8" class="col-2" src="/assets/img/ntt8.jpg" />
+                                <img id="img9" class="col-2" src="/assets/img/ntt9.jpg" />
+                            </div>
+                        </div>
+                        <div class="carousel-item" id="10">
+                            <div class="align-items-center row">
+                                <img id="img5" class="col-2" src="/assets/img/ntt5.jpg" />
+                                <img id="img6" class="col-2" src="/assets/img/ntt6.jpg" />
+                                <img id="img7" class="col-2" src="/assets/img/ntt7.jpg" />
+                                <img id="img8" class="col-2" src="/assets/img/ntt8.jpg" />
+                                <img id="img9" class="col-2" src="/assets/img/ntt9.jpg" />
+                                <img id="img10" class="col-2" src="/assets/img/ntt10.jpg" />
+                            </div>
+                        </div>
+                        <div class="carousel-item" id="1">
+                            <div class="align-items-center row">
+                                <img id="img6" class="col-2" src="/assets/img/ntt6.jpg" />
+                                <img id="img7" class="col-2" src="/assets/img/ntt7.jpg" />
+                                <img id="img8" class="col-2" src="/assets/img/ntt8.jpg" />
+                                <img id="img9" class="col-2" src="/assets/img/ntt9.jpg" />
+                                <img id="img10" class="col-2" src="/assets/img/ntt10.jpg" />
+                                <img id="img1" class="col-2" src="/assets/img/ntt1.jpg" />
+                            </div>
+                        </div>
+                        <div class="carousel-item" id="2">
+                            <div class="align-items-center row">
+                                <img id="img7" class="col-2" src="/assets/img/ntt7.jpg" />
+                                <img id="img8" class="col-2" src="/assets/img/ntt8.jpg" />
+                                <img id="img9" class="col-2" src="/assets/img/ntt9.jpg" />
+                                <img id="img10" class="col-2" src="/assets/img/ntt10.jpg" />
+                                <img id="img1" class="col-2" src="/assets/img/ntt1.jpg" />
+                                <img id="img2" class="col-2" src="/assets/img/ntt2.jpg" />
+                            </div>
+                        </div>
+                        <div class="carousel-item" id="3">
+                            <div class="align-items-center row">
+                                <img id="img8" class="col-2" src="/assets/img/ntt8.jpg" />
+                                <img id="img9" class="col-2" src="/assets/img/ntt9.jpg" />
+                                <img id="img10" class="col-2" src="/assets/img/ntt10.jpg" />
+                                <img id="img1" class="col-2" src="/assets/img/ntt1.jpg" />
+                                <img id="img2" class="col-2" src="/assets/img/ntt2.jpg" />
+                                <img id="img3" class="col-2" src="/assets/img/ntt3.jpg" />
+                            </div>
+                        </div>
+                        <div class="carousel-item" id="4">
+                            <div class="align-items-center row">
+                                <img id="img9" class="col-2" src="/assets/img/ntt9.jpg" />
+                                <img id="img10" class="col-2" src="/assets/img/ntt10.jpg" />
+                                <img id="img1" class="col-2" src="/assets/img/ntt1.jpg" />
+                                <img id="img2" class="col-2" src="/assets/img/ntt2.jpg" />
+                                <img id="img3" class="col-2" src="/assets/img/ntt3.jpg" />
+                                <img id="img4" class="col-2" src="/assets/img/ntt4.jpg" />
+                            </div>
+                        </div>
+                        <div class="carousel-item" id="5">
+                            <div class="align-items-center row">
+                                <img id="img10" class="col-2" src="/assets/img/ntt10.jpg" />
+                                <img id="img1" class="col-2" src="/assets/img/ntt1.jpg" />
+                                <img id="img2" class="col-2" src="/assets/img/ntt2.jpg" />
+                                <img id="img3" class="col-2" src="/assets/img/ntt3.jpg" />
+                                <img id="img4" class="col-2" src="/assets/img/ntt4.jpg" />
+                                <img id="img5" class="col-2" src="/assets/img/ntt5.jpg" />
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#carousel-3" role="button" data-slide="prev" class="carousel-control-prev">
+                            <span aria-hidden="true"></span><span class="sr-only">Previous</span>
+                        </a>
+                        <a href="#carousel-3" role="button" data-slide="next" class="carousel-control-next">
+                            <span aria-hidden="true"></span><span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="row footer" style="font-size: 0.8rem;">
         <div class="col-10 row" style="margin-left: 8%;padding-top: 3vh;">
