--- a/17_Tour/assets/css/styles.css
+++ b/17_Tour/assets/css/styles.css
@@ -85,11 +85,11 @@
 .tv-card-item .tv-card-img {
   background-color: #dadada;
   width: 100%;
-  padding-bottom: 20px;
+ 
 }
 
 .cscn-item .cmt {
-  background-image: url(../../assets/img/dau-ngoac-hoi.png);
+  background-image: url(/assets/img/dau-ngoac-hoi.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 30%;
@@ -281,4 +281,7 @@ html, body {
 }
 .caroucel-style2 .owl-controls .owl-prev, .caroucel-style2 .owl-controls .owl-next {
     top: 40%;
+}
+.tv-card-text{
+    margin:15px;
 }
