--- a/17_Tour/Views/Shared/_Layout.cshtml
+++ b/17_Tour/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900&amp;subset=vietnamese">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css">
+
     @Styles.Render("~/bundles/global.css")
     @RenderSection("health", required: false)
     @RenderSection("Styles", required: false)
@@ -77,6 +78,33 @@
 
                 </ul>
             </div>
+            @*<div class="collapse navbar-collapse" id="navcol-1" style="margin-left: 18%;">
+                <ul class="nav navbar-nav d-xl-flex justify-content-xl-center w-100" style="font-size: 14px;">
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/">TRANG CHỦ<div class="nav-item-under"></div></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/">GIỚI THIỆU<div class="nav-item-under"></div></a></li>
+                    
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" role="button" data-toggle="dropdown" aria-haspopup="true">
+                            HÀNH TRÌNH
+                            <div class="nav-item-under"></div>
+                        </a>
+                        <div class="dropdown-menu" style="padding-left: 10%;padding-right: 10%;" aria-labelledby="hanhtrinhdd">
+                            <a class="dropdown-item" href="/han-quoc-p3869">HÀN QUỐC</a>
+                            <a class="dropdown-item" href="/malaysia-p3868">MALAYSIA</a>
+                            <a class="dropdown-item" href="/philippines-p3867">PHILIPPINES</a>
+                            <a class="dropdown-item" href="/tho-nhi-ky-p3866">THỔ NHĨ KỲ</a>
+                        </div>
+                    </li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/">THƯ VIỆN<div class="nav-item-under"></div></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/home/contact">LIÊN HỆ<div class="nav-item-under"></div></a></li>
+                    <li class="nav-item ml-auto" role="presentation">
+                        <a class="nav-link d-lg-flex align-items-xl-center" href="javascript:doGTranslate('vi|en');" style="height: 100%;">
+                            <img class="d-lg-flex ml-auto" src="/assets/img/EnFlag.png" style="width: 25%;">
+                        </a>
+                    </li>
+
+                </ul>
+            </div>*@
         </div>
     </nav>
     <div class="bg-white body-back">
