--- a/17_Tour/assets/css/hanhtrinh.css
+++ b/17_Tour/assets/css/hanhtrinh.css
@@ -1,5 +1,6 @@
 .divgachxannh {
   border: 1px cyan solid;
+  height:1px;
 }
 
 #tbcntt {
@@ -9,6 +10,7 @@
 #btcntt {
   margin-top: 3%;
   border: 1px black solid;
+  width:1px;
 }
 
 #member-area {
