--- a/17_Tour/html/assets/css/hanhtrinh.css
+++ b/17_Tour/html/assets/css/hanhtrinh.css
@@ -1,5 +1,6 @@
 .divgachxannh {
-  border: 1px cyan solid;
+    border: 1px cyan solid;
+    height: 1px;
 }
 
 #tbcntt {
@@ -7,8 +8,9 @@
 }
 
 #btcntt {
-  margin-top: 3%;
-  border: 1px black solid;
+    margin-top: 3%;
+    border: 1px black solid;
+    width: 1px;
 }
 
 #member-area {
