--- a/17_Tour/html/assets/css/styles.css
+++ b/17_Tour/html/assets/css/styles.css
@@ -97,10 +97,10 @@
 }
 
 .cscn-item {
-  text-align: center;
-  width: 33%;
-  padding-left: 1%;
-  padding-right: 1%;
+    text-align: center;
+    margin-bottom: 15px;
+    padding-left: 1%;
+    padding-right: 1%;
 }
 
 
