--- a/17_Tour/Views/Home/Index.cshtml
+++ b/17_Tour/Views/Home/Index.cshtml
@@ -153,7 +153,7 @@
                         <p>@Html.Raw(categoryItem.Description)</p>
                     </div>
                 }
-                <div id="khacMoiAnh" class="col-md-8 multi-item-carousel" style="padding: 0px;overflow:hidden;">                    
+                <div id="khacMoiAnh" class="col-md-8 multi-item-carousel" style="padding: 0px;overflow:hidden;">
                     <div role="listbox" class="owl-carousel-4 box-slide d-inline-flex">
                         @foreach (var item in productList.Item)
                         {
@@ -171,17 +171,17 @@
                             </div>
                         }
                     </div>
-                    
-                    
+
+
                 </div>
                 <div id="khachMoiText" class="col-md-4" style="padding: 0;">
                     @if (!isMobile)
                     {
-                    <div style="margin-right: 25%;margin-top: 40%;margin-left: 25%;">
-                        <h2 class="font-bold-play-fair" style="margin-bottom: 0px;padding-bottom: 2%;">Khách Mời</h2>
-                        <img class="gach-xanh" src="/assets/img/gach-xanh.png" style="padding-bottom: 13%;">
-                        <p>@Html.Raw(categoryItem.Description)</p>
-                    </div>
+                        <div style="margin-right: 25%;margin-top: 40%;margin-left: 25%;">
+                            <h2 class="font-bold-play-fair" style="margin-bottom: 0px;padding-bottom: 2%;">Khách Mời</h2>
+                            <img class="gach-xanh" src="/assets/img/gach-xanh.png" style="padding-bottom: 13%;">
+                            <p>@Html.Raw(categoryItem.Description)</p>
+                        </div>
                     }
                 </div>
             }
@@ -196,198 +196,75 @@
         <div id="thuVienCards">
             <div class="carousel slide" data-ride="carousel" id="carousel-2">
                 <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active">
-                        <div class="row" style="margin-right: 1%;margin-left: 1%;">
-                            <!-- thu vien 1 -->
-                            <div id="tv-card-item1" class="tv-card-item">
-                                <div class="bg-white">
-                                    <img class="tv-card-img" src="/assets/img/thuvien1.png">
-                                    <div class="tv-card-text">
-                                        <h5 class="font-bold-play-fair" style="margin-bottom: 0;">Amazing Tour 1</h5>
-                                        <div class="row" style="margin: 0;">
-                                            <p style="margin-bottom: 0;width: 50%;padding-bottom:10%;">Hàn Quốc</p>
+                    <div class="carousel-item active d-inline-flex">
+                        <div class="row owl-carousel-4 box-slide" style="margin-right: 1%;margin-left: 1%;">
+                            @if (ViewData["thuvien"] != null)
+                            {
+
+                                SearchResult productList = (SearchResult)ViewData["thuvien"];
+                                foreach (var item in productList.Item)
+                                {
+                                    <div class="tv-card-item item">
+                                        <div class="bg-white">
+                                            <a href="@item.TagLink">
+                                                <img class="tv-card-img" src="@item.Images">
+                                            </a>
+                                            <div class="tv-card-text">
+                                                <h5 class="font-bold-play-fair" style="margin-bottom: 0;">@item.PrName</h5>
+                                                <div class="row" style="margin: 0;">
+                                                    <p style="margin-bottom: 0;width: 50%;padding-bottom:10%;">@item.Tag</p>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
-                            <!-- thu vien 2  -->
-                            <div id="tv-card-item2" class="tv-card-item">
-                                <div class="bg-white">
-                                    <img class="tv-card-img" src="/assets/img/thuvien2.png">
-                                    <div class="tv-card-text">
-                                        <h5 class="font-bold-play-fair" style="margin-bottom: 0;">Amazing Tour 2</h5>
-                                        <div class="row" style="margin: 0;">
-                                            <p style="margin-bottom: 0;width: 50%;padding-bottom:10%;">Malaysia</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- thu vien 3  -->
-                            <div id="tv-card-item3" class="tv-card-item">
-                                <div class="bg-white">
-                                    <img class="tv-card-img" src="/assets/img/thuvien3.png">
-                                    <div class="tv-card-text">
-                                        <h5 class="font-bold-play-fair" style="margin-bottom: 0;">Amazing Tour 3</h5>
-                                        <div class="row" style="margin: 0;">
-                                            <p style="margin-bottom: 0;width: 50%;padding-bottom:10%;">Philippines</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- thu vien 4  -->
-                            <div id="tv-card-item4" class="tv-card-item">
-                                <div class="bg-white">
-                                    <img class="tv-card-img" src="/assets/img/thuvien4.png">
-                                    <div class="tv-card-text">
-                                        <h5 class="font-bold-play-fair" style="margin-bottom: 0;">Amazing Tour 4</h5>
-                                        <div class="row" style="margin: 0;">
-                                            <p id="thuVien" style="margin-bottom: 0; padding-bottom:10%;width: 50%;">Thổ Nhĩ Kỳ</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- end  -->
+                                }
+
+
+                            }
+
+
                         </div>
                     </div>
                 </div>
                 <div>
-                    <a class="carousel-control-prev" href="#carousel-2" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-2" role="button"
-                                                                                                                                                                                                    data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a>
+                    @*<a class="carousel-control-prev" href="#carousel-2" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-2" role="button"
+                        data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a>*@
                 </div>
-                <ol class="carousel-indicators" style="margin-left: 0;margin-top: 0;margin-right: 0;margin-bottom: -5%;">
-                    <li data-target="#carousel-2" data-slide-to="0" class="active"></li>
-                </ol>
+
             </div>
         </div>
     </div>
     <div id="chiaSe-camNhan" class="text-center" style="padding-bottom: 5%;">
         <h2 class="font-bold-play-fair" style="padding-top: 7%;margin-bottom: 7%;">Chia Sẻ &amp; Cảm Nhận</h2>
         <div id="chiaSe-camNhan-content">
-            <div>
-                <div class="row" style="padding-bottom: 5%;padding-right: 8%;padding-left: 8%;">
-                    <!-- chia se cam nhan  -->
-                    <div id="cscn-item-id" class="cscn-item">
-                        <img src="/assets/img/cscn1.png">
-                        <h6 class="font-bold-play-fair">Mr. Kang Sungghill</h6>
-                        <h6 class="text-uppercase">Trưởng Đại Diện Tổng Cục<br> Du Lịch Hàn Quốc Tại Việt Nam</h6>
-                        <p class="cmt">
-                            "Amazing Photo Tour không chỉ đơn thuần là Fam Tour dành cho các nhà báo mà thành phần tham dự còn có cả các nhà nhiếp ảnh, sản suất phim nổi tiếng nên nó trở nên vô cùng đặc biệt và đây cũng là nhân tố được kỳ vọng sẽ tạo
-                            ra được thật nhiều tác phẩm có giá trị sau chương trình"
-                        </p>
-                    </div>
-                    <!-- end  -->
-                    <div id="cscn-item-id" class="cscn-item">
-                        <img src="/assets/img/cscn2.png">
-                        <h6 class="font-bold-play-fair">Đại Diện Turkish Airlines</h6>
-                        <h6 class="font-play-fair"></h6>
-                        <p class="cmt">
-                            Sự tin cậy dành cho nhà tổ chức Amazing Tour - Travellive, tạp chí uy tính hàng đầu về du lịch giải trí - cũng là lý di để Tukish Arilines tài trợ cho chương trình này. Turkish Airlines sẽ lên kế hoặc cùng đồng hành với  Amazing
-                            Tour để tạo ra chuỗi sản phần các điểm đến trong  thời gian tới
-                        </p>
-                    </div>
-                    <!-- end  -->
-                    <div id="cscn-item-id" class="cscn-item">
-                        <img src="/assets/img/cscn3.png">
-                        <h6 class="font-bold-play-fair">Hoàng Hà</h6>
-                        <h6 class="text-uppercase">Trưởng Ban Ảnh Báo<br>Điện Tử Zing News</h6>
-                        <p class="cmt">"Qua các bức ảnh video tư liệu của các nhà báp, phóng viên nhiếp ảnh , chúng tôi hy vọng có thể đem tới cho người xem những góc nhìn đa chiều khác quan và chân thực nhất về Malaysia"</p>
-                    </div>
-                    <!-- end  -->
-                </div>
 
-                <div class="row" style="padding-bottom: 5%;padding-right: 8%;padding-left: 8%;">
-                    <div id="cscn-item-id" class="cscn-item">
-                        <img src="/assets/img/cscn4.png">
-                        <h6 class="font-bold-play-fair">Nhã Trúc</h6>
-                        <h6 class="text-uppercase">Người Mẫu</h6>
-                        <p class="cmt">
-                            "Hành trình tới Malaysia đã đem tới cho tôi những trải nghiệm thật thứ vị tại đất nước xinh đẹp này. Cảm ơn Amazing Tour đã tạo nên một chương trình đầy ý nghĩa và bổ ích giúp thúc đẩy niềm đam mê du lịch của mọi người đặc
-                            biệt là các bạn trẻ đam mê du lịch khám phá"
-                        </p>
-                    </div>
-                    <!-- end  -->
-                    <div id="cscn-item-id" class="cscn-item">
-                        <img src="/assets/img/cscn5.png">
-                        <h6 class="font-bold-play-fair">Bình An</h6>
-                        <h6 class="text-uppercase">Thành Viên Đoàn</h6>
-                        <p class="cmt">"Những ngày ở Thổ Nhĩ Kỳ thật sự là chuỗi ký ức thậ đẹp"</p>
-                    </div>
-                    <!-- end  -->
-                    <div id="cscn-item-id" class="cscn-item">
-                        <img src="/assets/img/cscn6.png">
-                        <h6 class="font-bold-play-fair">Trần Đức Việt</h6>
-                        <h6 class="text-uppercase">Nhiếp Ảnh Gia</h6>
-                        <p class="cmt">
-                            "Amazing Tour đã cho tôi những trải nghiệm vô cùng tuyệt vời tại xứ sở kim chi Hàn Quốc. Hy vọng qua những tác phẩm chúng tôi ghi lại tại nơi đây sẽ giúp các du khách hiểu rõ hơn về con người văn hóa Hàn Quốc và hơn nữa là
-                            truyền cảm hứng du lịch cho người dân Việt Nam"
-                        </p>
-                    </div>
-                    <!-- end  -->
-                </div>
-            </div>
-            <div id="showMore">
-                <div class="row" style="padding-bottom: 5%;padding-right: 8%;padding-left: 8%;">
-                    <!-- end  -->
-                    <div id="cscn-item-id" class="cscn-item">
-                        <img src="/assets/img/cscn1.png">
-                        <h6 class="font-bold-play-fair">Mr. Kang Sungghill</h6>
-                        <h6 class="text-uppercase">Trưởng Đại Diện Tổng Cục<br> Du Lịch Hàn Quốc Tại Việt Nam</h6>
-                        <p class="cmt">
-                            "Amazing Photo Tour không chỉ đơn thuần là Fam Tour dành cho các nhà báo mà thành phần tham dự còn có cả các nhà nhiếp ảnh, sản suất phim nổi tiếng nên nó trở nên vô cùng đặc biệt và đây cũng là nhân tố được kỳ vọng sẽ tạo
-                            ra được thật nhiều tác phẩm có giá trị sau chương trình"
-                        </p>
-                    </div>
-                    <!-- end  -->
-                    <div id="cscn-item-id" class="cscn-item">
-                        <img src="/assets/img/cscn2.png">
-                        <h6 class="font-bold-play-fair">Đại Diện Turkish Airlines</h6>
-                        <h6 class="font-play-fair"></h6>
-                        <p class="cmt">
-                            Sự tin cậy dành cho nhà tổ chức Amazing Tour - Travellive, tạp chí uy tính hàng đầu về du lịch giải trí - cũng là lý di để Tukish Arilines tài trợ cho chương trình này. Turkish Airlines sẽ lên kế hoặc cùng đồng hành với  Amazing
-                            Tour để tạo ra chuỗi sản phần các điểm đến trong  thời gian tới
-                        </p>
-                    </div>
-                    <!-- end  -->
-                    <div id="cscn-item-id" class="cscn-item">
-                        <img src="/assets/img/cscn3.png">
-                        <h6 class="font-bold-play-fair">Hoàng Hà</h6>
-                        <h6 class="text-uppercase">Trưởng Ban Ảnh Báo<br>Điện Tử Zing News</h6>
-                        <p class="cmt">"Qua các bức ảnh video tư liệu của các nhà báp, phóng viên nhiếp ảnh , chúng tôi hy vọng có thể đem tới cho người xem những góc nhìn đa chiều khác quan và chân thực nhất về Malaysia"</p>
-                    </div>
-                    <!-- end  -->
-                </div>
+            @if (ViewData["chiase"] != null)
+            {
 
-                <div class="row" style="padding-bottom: 5%;padding-right: 8%;padding-left: 8%;">
-                    <!-- end  -->
-                    <div id="cscn-item-id" class="cscn-item">
-                        <img src="/assets/img/cscn4.png">
-                        <h6 class="font-bold-play-fair">Nhã Trúc</h6>
-                        <h6 class="text-uppercase">Người Mẫu</h6>
-                        <p class="cmt">
-                            "Hành trình tới Malaysia đã đem tới cho tôi những trải nghiệm thật thứ vị tại đất nước xinh đẹp này. Cảm ơn Amazing Tour đã tạo nên một chương trình đầy ý nghĩa và bổ ích giúp thúc đẩy niềm đam mê du lịch của mọi người đặc
-                            biệt là các bạn trẻ đam mê du lịch khám phá"
-                        </p>
-                    </div>
-                    <!-- end  -->
-                    <div id="cscn-item-id" class="cscn-item">
-                        <img src="/assets/img/cscn5.png">
-                        <h6 class="font-bold-play-fair">Bình An</h6>
-                        <h6 class="text-uppercase">Thành Viên Đoàn</h6>
-                        <p class="cmt">"Những ngày ở Thổ Nhĩ Kỳ thật sự là chuỗi ký ức thậ đẹp"</p>
-                    </div>
-                    <!-- end  -->
-                    <div id="cscn-item-id" class="cscn-item">
-                        <img src="/assets/img/cscn6.png">
-                        <h6 class="font-bold-play-fair">Trần Đức Việt</h6>
-                        <h6 class="text-uppercase">Nhiếp Ảnh Gia</h6>
-                        <p class="cmt">
-                            "Amazing Tour đã cho tôi những trải nghiệm vô cùng tuyệt vời tại xứ sở kim chi Hàn Quốc. Hy vọng qua những tác phẩm chúng tôi ghi lại tại nơi đây sẽ giúp các du khách hiểu rõ hơn về con người văn hóa Hàn Quốc và hơn nữa là
-                            truyền cảm hứng du lịch cho người dân Việt Nam"
-                        </p>
-                    </div>
-                    <!-- end  -->
+                SearchResult productList = (SearchResult)ViewData["chiase"];
+                if (productList != null && productList.Item.Length > 0)
+                {
+
+                }
+                <div class="row " style="padding-bottom: 5%;padding-right: 8%;padding-left: 8%;">
+                    @for (int i = 0; i < productList.Item.Length; i++)
+                    {
+                        var showMoreClass = "";
+                        if (i >= 6)
+                        {
+                            showMoreClass = "showMore";
+                        }
+                        <div class="cscn-item col-md-4 col-sm-12 @showMoreClass">
+                            <img src="@productList.Item[i].Images" style="border-radius: 50%;width:40%;">
+                            <h6 class="font-bold-play-fair">@productList.Item[i].PrName</h6>
+                            <h6 class="text-uppercase">@Html.Raw(productList.Item[i].Tag)</h6>
+                            <p class="cmt">
+                                @Html.Raw(productList.Item[i].ShortDesc)
+                            </p>
+                        </div>
+                    }
                 </div>
-            </div>
+            }
         </div>
         <div class="justify-content-center row">
             <div class="col-2" style="padding-bottom: 3%;">
@@ -398,9 +275,16 @@
     </div>
 </div>
 @section scripts {
+    <style>
+        .showMore{
+            display:none;
+        }
+    </style>
     <script>
         $(document).ready(function () {
-
+            $("#showicon").click(function () {
+                $(".showMore").slideDown();
+            });
 
         });
 
