--- a/17_Tour/assets/css/styles.css
+++ b/17_Tour/assets/css/styles.css
@@ -76,7 +76,6 @@
 
 .tv-card-item {
   background-color: #dadada;
-  width: 25%;
   text-align: left;
   padding-left: 1%;
   padding-right: 1%;
@@ -97,10 +96,10 @@
 }
 
 .cscn-item {
-  text-align: center;
-  width: 33%;
-  padding-left: 1%;
-  padding-right: 1%;
+    text-align: center;
+    margin-bottom: 15px;
+    padding-left: 1%;
+    padding-right: 1%;
 }
 
 
