update tour theme

--- a/16_Shop_MultiProduct/Views/Product/Index.cshtml
+++ b/16_Shop_MultiProduct/Views/Product/Index.cshtml
@@ -469,6 +469,13 @@
             .breadcrumb {
                 margin: 22px 0 15px;
             }
+               .slick-slider .slick-arrow{
+left:-11px;
+            }
+            .slick-slider .slick-arrow.next { 
+                right: -12px!important;
+            }
+            
         </style>
 
     }
